# Intel_Realsense

./: .gitignore  CMakeLists.txt  README.md  launch.cpp  launch.py
examples/: PCLpyglet.py  ad_mode.py  background_removal.py  bag.py  depth.py  open_cv.py
ros2wrapper/install/: local_setup.sh  setup.sh
ros2wrapper/install/realsense2_camera/lib/realsense2_camera/: realsense2_camera_node
ros2wrapper/install/realsense2_camera/share/realsense2_camera/: package.sh
ros2wrapper/install/realsense2_camera_msgs/share/realsense2_camera_msgs/: local_setup.sh  package.sh
ros2wrapper/install/realsense2_camera_msgs/share/realsense2_camera_msgs/cmake/: export_realsense2_camera_msgs__rosidl_generator_cExport.cmake  export_realsense2_camera_msgs__rosidl_generator_cppExport.cmake  export_realsense2_camera_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_realsense2_camera_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  realsense2_camera_msgs__rosidl_typesupport_introspection_cExport.cmake
ros2wrapper/install/realsense2_description/share/realsense2_description/: local_setup.sh  package.sh
ros2wrapper/log/: latest_build
ros_env/install/: local_setup.sh  setup.sh
ros_env/install/intel_camera/lib/intel_camera/: intel_pub  intel_sub
ros_env/install/intel_camera/share/intel_camera/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros_env/log/: latest_build
ros_env/src/intel_camera/: package.xml  setup.cfg  setup.py
ros_env/src/intel_camera/intel_camera/: intel_pub.py  intel_sub.py
(+1 files in other folders)
